# eval-loop

./: .env.dev  .gitignore  .markdownlint.json  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  vite-env.ts  vite.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json  post_create.sh
.github/: CI_TESTING_GUIDE.md
.github/agents/: py-reviewer.agent.md
.github/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  code-review-generic.instructions.md
.github/prompts/: ai-prompt-engineering-safety-review.prompt.md  create-plan.prompt.md  implement-plan.prompt.md
.github/workflows/: ci.yml
coverage/: index.html
coverage/constitutional-qa-agent/: index.html  vite-env.ts.html
coverage/constitutional-qa-agent/src/eval/report_generation/templates/: index.html  script.js.html
coverage/constitutional-qa-agent/src/ui/: App.tsx.html  index.html  index.tsx.html
coverage/constitutional-qa-agent/src/ui/components/: Button.tsx.html  ContentBlock.tsx.html  ExcelFileUpload.tsx.html  FileUpload.tsx.html  InputText.tsx.html  Overlay.tsx.html  TextArea.tsx.html  index.html
coverage/constitutional-qa-agent/src/ui/shared/: Button.tsx.html  Card.tsx.html  Input.tsx.html  Separator.tsx.html  Textarea.tsx.html  index.html
coverage/constitutional-qa-agent/src/ui/utils/: api.ts.html  css.ts.html  error.ts.html  fileValidation.ts.html  index.html
data/: constitution.json  eval_dataset.json  reality.json
docs/: ADR01-domain-change.md  IMPLEMENTATION-PLAN-domain-change.md
docs/notes/: 20251106-domain-migration-banking-notes.md  20260116-conversation-history-threads-notes.md  20260121-display-axioms-reality-in-report-notes.md
docs/plans/: 20251106-domain-migration-banking.md  20260116-conversation-history-threads.md  20260121-display-axioms-reality-in-report.md  IMPLEMENTATION-PLAN-domain-change.md
patches/: vite+4.5.14.patch
samples/: basic_qa.py  basic_qa_streaming.py  conversation_qa.py  qa_with_reality.py  run_all_samples.py
src/api/: generate.py  health.py  main.py
src/core/: __init__.py  axiom_store.py  dependencies.py  prompt.py  qa_engine.py  reality.py
src/core/prompts/: constitution.j2  constitution.md  reality.j2  system_prompt.md  user_prompt.j2  user_prompt.md
src/eval/: dependencies.py  eval.py  main.py  models.py
src/eval/baseline/: main.py
src/eval/experiment_01/: main.py
src/eval/llm_evaluator/: qa_eval_engine.py
src/eval/llm_evaluator/prompts/: accuracy_prompt.md  entity_extraction_prompt.md  system_prompt.md  topic_coverage_prompt.md
src/eval/metrics/: accuracy.py  dependencies.py  extract_entities.py  models.py  topic_coverage.py
src/eval/report_generation/: report.py
src/eval/report_generation/templates/: index.html  script.js  styles.css
src/report_generation/: main.py
src/ui/: App.tsx  alias.config.ts  index.tsx  vite-env.d.ts
src/ui/components/: Button.css  Button.tsx  ContentBlock.css  ContentBlock.tsx  ExcelFileUpload.tsx  FileUpload.css  FileUpload.tsx  InputText.css  InputText.tsx  JsonFileUpload.tsx  Overlay.css  Overlay.tsx  TextArea.css  TextArea.tsx  Toast.css  Toast.tsx
src/ui/shared/: Button.tsx  Card.tsx  Input.tsx  Separator.tsx  Textarea.tsx
src/ui/styles/: App.css  common.css
src/ui/utils/: api.ts  error.ts  fileValidation.ts  session.ts  toastManager.ts  useToast.ts
tests/: conftest.py
tests/api/: conftest.py  test_generate.py  test_generate_endpoint.py  test_generate_error_handling.py
tests/core/: reality_test_data.py  test_dependencies.py  test_qa_engine.py
tests/eval/: common.py  test_accuracy.py  test_definition_loading.py  test_eval.py  test_extract_entities.py  test_models.py  test_reference_evaluation.py  test_report_generation.py  test_topic_coverage.py
tests/test_eval/: test_concurrency.py
tests/tests_eval/: test_concurrency.py  test_eval.py
tests/ui/: api.spec.ts  css.spec.ts  main.spec.ts  report-script.spec.ts  session.spec.ts
