[project]
name = "constitutional-qa-agent"
version = "0.1.0"
description = "Constitutional Q&A Agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Isabel Cabezas", email = "isacabe@microsoft.com" },
  { name = "Marc Gomez", email = "marcgomez@microsoft.com" },
  { name = "Bastian Burger", email = "bastian.burger@microsoft.com" },
]

dependencies = [
  "azure-identity>=1.23.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.11.7",
  "scipy>=1.15.3",
  "agent-framework==1.0.0b251028",
  "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "ruff>=0.12.0",
  "ipykernel>=6.29.5",
  "pip>=25.1.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[project.urls]
Homepage = "https://github.com/isabelcabezasm/constitutional-qa-agent"
Repository = "https://github.com/isabelcabezasm/constitutional-qa-agent"
Issues = "https://github.com/isabelcabezasm/constitutional-qa-agent/issues"

[project.scripts]
constitutional-qa-agent = "eval.baseline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval", "src/core", "src/api"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
deprecateTypingAliases = true
reportCallInDefaultInitializer = "error"
# PEP-698 is available with Python 3.12
reportImplicitOverride = "none"
reportImplicitStringConcatenation = "error"
reportImportCycles = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"
reportUnreachable = "error"

[tool.ruff]
src = ["src", "tests"]
line-length = 79
target-version = "py312"
show-fixes = true
lint.select = [
  "B0",     # bugbear
  "E",      # pycodestyle
  "I",      # import order
  "UP",     # pyupgrade
  "RUF100", # valid noqa annnotations
]


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
